front: fix notification above all & map add train too big

--- a/front/src/styles/scss/applications/operationalStudies/_managetrainschedule.scss
+++ b/front/src/styles/scss/applications/operationalStudies/_managetrainschedule.scss
@@ -48,7 +48,7 @@
 
 .osrd-config-item-container-map {
   border-radius: 0 0 4px 4px;
-  height: 85vh;
+  height: 50vh;
   &.open {
     height: 40vh;
   }
